--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -94,11 +94,8 @@
 
             </div>
         </div>
-        <div class="nav nav-tabs">
-            <ul>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
-            </ul>
+        <div class="nav-tabs">
+
             <div class="col-lg-6">
                 <ul class="topic-list list-unstyled list-group">
             <li>
