--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -15,9 +15,9 @@
     <link href="../../Public/css/bootstrap.min.css" rel="stylesheet">
     <link href="../../Public/css/index-nav.css" rel="stylesheet">
     <link href="../../Public/css/index.css" rel="stylesheet">
-
-
-
+    <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/index-nav.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/index.css" rel="stylesheet">
 </head>
 <body>
 
