--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -57,7 +57,7 @@
                 <li><a href="#">设置</a></li>
                 <li><a href="#">登陆</a></li>
                 <li><a href="#">注册</a></li>
-                <li><img class="small" src="../../Public/img/icon.png" style="width:40px;height:40px"></li>
+                <li><img class="small" src="__PUBLIC__/img/icon.png" style="width:40px;height:40px"></li>
 
             </ul>
         </div>
