--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -100,7 +100,7 @@
                 <ul class="topic-list list-unstyled list-group">
             <li>
                 <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
+                    <h2 align="left">{$title}</h2>
                     <div class="topic-meta">
                         <span class="author"><a href="#">gaoyang</a></span>
                         &nbsp;&nbsp;&nbsp;
