--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,46 +3,20 @@
 <head>
 	<title>Home</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link href="__PUBLIC__/css/bootstrap.css" rel='stylesheet' type='text/css' />
-	<link href="__PUBLIC__/css/style.css" rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="../../Public/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
+    <link href="../../Public/css/index-nav.css" rel="stylesheet">
+    <link href="../../Public/css/index.css" rel="stylesheet">
+	<link href="__PUBLIC__/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
+    <link href="__PUBLIC__/css/index-nav.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/index.css" rel="stylesheet">
+	<!--<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
 	<link href='http://fonts.useso.com/css?family=Lato:100,200,300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
 	<!-- 可选的Bootstrap主题文件（一般不用引入） -->
-	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<!--Animation>-->
-	<script src="__PUBLIC__/js/wow.min.js"></script>
-	<link href="__PUBLIC__/css/animate.min.css" rel='stylesheet' type='text/css' />
-	<script>
-	new WOW().init();
-	</script>
+	<!--<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">-->
 
 </head>
 <body>
-<<<<<<< HEAD
-	<div class="header-home">
-		<div class="fixed-header">
-			<div class="logo wow fadeInDown" data-wow-delay="0.2s">
-				<a href="index.html">
-					<span class="secondary">大学生的知乎</span>
-					<span class="main">E-Learning</span>
-				</a>
-			</div>
-			<div class="top-nav wow bounce" data-wow-delay="0.2s">
-				<span class="menu"> </span>
-				<ul>
-					<li class="active"><a href="index.html">首页</a></li>
-					<li><a href="about.html">我的课程</a></li>
-					<li><a href="services.html">我的大学</a></li>
-					<li><a href="blog.html">讨论区</a></li>
-					<li><a href="contact.html">联系我们</a></li>		
-				</ul>
-				<!-- script-nav -->
-
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-=======
 
 
 <nav class="nav navbar navbar-default navbar-fixed-top" role="navigation">
@@ -87,11 +61,9 @@
     </div>
 
 </nav>
->>>>>>> origin/master
 	<!--header-->
 
 	<!-- content -->
-<<<<<<< HEAD
 <div class="container main-content" style="padding-top: 40px">
     <div class="row">
         <div class="col-lg-3 siderbar container">
@@ -406,251 +378,7 @@
         </div>
     </div>
 
-=======
-	<div class="row wow fadeInDown" data-wow-delay="1s">
-		<div class="col-md-12">
-			<div class="row">
-				<div class="col-md-3">
-					<div class="row">
-						<div class="col-md-12">
-						</div>
-					</div>
-					<div class="row" style="margin-top:50px;">
-						<div class="col-md-12">
-						</div>
-					</div>
-					<div style="margin-left:70px;">
-						<h3>
-							院系专题
-						</h3>
-						<ul class="unstyled">
-							<li>
-								<h3>
-									新闻资讯
-								</h3>
-							</li>
-							<li>
-								<h3>
-									体育竞技
-								</h3>
-							</li>
-							<li>
-								<h3>
-									娱乐八卦
-								</h3>
-							</li>
-							<li>
-								<h3>
-									前沿科技
-								</h3>
-							</li>
-							<li>
-								<h3>
-									环球财经
-								</h3>
-							</li>
-							<li>
-								<h3>
-									天气预报
-								</h3>
-							</li>
-							<li>
-								<h3>
-									房产家居
-								</h3>
-							</li>
-							<li>
-								<h3>
-									网络游戏
-								</h3>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-md-6" style="margin-top:20px;">
-					<div class="tabbable" id="tabs-363493">
-						<ul class="nav nav-tabs">
-							<li class="active">
-								<a data-toggle="tab" href="#panel-656096">最新</a>
-							</li>
-							<li>
-								<a data-toggle="tab" href="#panel-261220">热门</a>
-							</li>
-						</ul>
-						<div class="tab-content wow fadein" data-wow-delay="1s">
-							<div class="tab-pane active" id="panel-656096">
-								<!-- 第一部分内容 -->
-								<h2>
-									标题1
-								</h2>
-								<p>
-									本可视化布局程序在HTML5浏览器上运行更加完美, 能实现自动本地化保存, 即使关闭了网页, 下一次打开仍然能恢复上一次的操作.
-								</p>
-								<p>
-									<a class="btn" href="{:U('Index/concrete')}">查看全部 »</a>
-									<a class="btn" href="#">评论 »</a>
-								</p>
-								<h2>
-									标题2
-								</h2>
-								<p>
-									本可视化布局程序在HTML5浏览器上运行更加完美, 能实现自动本地化保存, 即使关闭了网页, 下一次打开仍然能恢复上一次的操作.
-								</p>
-								<p>
-									<a class="btn" href="#">查看更多 »</a>
-								</p>
-								<h2>
-									标题3
-								</h2>
-								<p>
-									本可视化布局程序在HTML5浏览器上运行更加完美, 能实现自动本地化保存, 即使关闭了网页, 下一次打开仍然能恢复上一次的操作.
-								</p>
-								<p>
-									<a class="btn" href="#">查看更多 »</a>
-								</p>
-							</div>
-							<div class="tab-pane" id="panel-261220">
-								<!-- 第二部分内容. -->
-								<h2>
-									标题4
-								</h2>
-								<p>
-									本可视化布局程序在HTML5浏览器上运行更加完美, 能实现自动本地化保存, 即使关闭了网页, 下一次打开仍然能恢复上一次的操作.
-								</p>
-								<p>
-									<a class="btn" href="#">查看更多 »</a>
-								</p>
-								<h2>
-									标题5
-								</h2>
-								<p>
-									本可视化布局程序在HTML5浏览器上运行更加完美, 能实现自动本地化保存, 即使关闭了网页, 下一次打开仍然能恢复上一次的操作.
-								</p>
-								<p>
-									<a class="btn" href="#">查看更多 »</a>
-								</p>
-								<h2>
-									标题6
-								</h2>
-								<p>
-									本可视化布局程序在HTML5浏览器上运行更加完美, 能实现自动本地化保存, 即使关闭了网页, 下一次打开仍然能恢复上一次的操作.
-								</p>
-								<p>
-									<a class="btn" href="#">查看更多 »</a>
-								</p>
-							</div>
-						</div>
-					</div>
-					
-				</div>
-				<div class="col-md-3">
-					<div class="row">
-						<div class="col-md-12">
-						</div>
-					</div>
-					<div class="row" style="margin-top:50px;">
-						<div class="col-md-12">
-						</div>
-					</div>
-					<div style="margin-left:70px;">
-						<h3>
-							热门话题
-						</h3>
-						<ul class="unstyled">
-							<li>
-								<h3>
-									新闻资讯
-								</h3>
-							</li>
-							<li>
-								<h3>
-									体育竞技
-								</h3>
-							</li>
-							<li>
-								<h3>
-									娱乐八卦
-								</h3>
-							</li>
-							<li>
-								<h3>
-									前沿科技
-								</h3>
-							</li>
-							<li>
-								<h3>
-									环球财经
-								</h3>
-							</li>
-							<li>
-								<h3>
-									天气预报
-								</h3>
-							</li>
-							<li>
-								<h3>
-									房产家居
-								</h3>
-							</li>
-							<li>
-								<h3>
-									网络游戏
-								</h3>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</div>
-<div class="footer wow fadeInUp" data-wow-delay="0.4s">
-	<div class="container">
-		<div class="footer_top">
-			<div class="col-sm-3">
-				<ul class="list1">
-					<h3>浏览</h3>
-					<li><a href="#">我的大学</a></li>
-					<li><a href="#">我的课程</a></li>
-					<li><a href="#">讨论区</a></li>
-					<li><a href="#">联系我们</a></li>
-				</ul>
-			</div>
-			<div class="col-sm-3">
-				<ul class="list1">
-					<h3>下个功能等你来猜</h3>
-					<li><a href="#">博客</a></li>
-					<li><a href="#">管理</a></li>
-					<li><a href="#">历史</a></li>
-					<li><a href="#">文学</a></li>
-				</ul>
-			</div>
-			<div class="col-sm-3">
-				<ul class="list1">
-					<h3>关于学习</h3>
-					<li><a href="#">关于我们</a></li>
-					<li><a href="#">应用</a></li>
-					<li><a href="#">学习环境</a></li>
-					<li><a href="#">注册</a></li>
-				</ul>
-			</div>
-			<div class="col-sm-3">
-				<ul class="socials">
-					<li><a href="#"><i class="fa fb fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa tw fa-twitter"></i></a></li>
-				</ul>
-				<ul class="list2">
-					<li><strong class="phone">+8618668775879</strong><br><small>周一到周五 / 9.00AM - 06.00PM</small></li>
-					<li>Questions? <a href="malito:mail@demolink.org">hcw13@software.nju.edu.cn</a></li>
-				</ul>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-</div>
-<div class="copy">
-	<p>Copyright &copy; 2015.E-Learning团队。</p>
->>>>>>> b53c521f0f238ca2b6aea92f75bba12a91142243
+
 </div>
 <div style="display:none"><script src='http://v7.cnzz.com/stat.php?id=155540&web_id=155540' language='JavaScript' charset='gb2312'></script></div>
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
