--- a/Application/Home/View/Index/signin.html
+++ b/Application/Home/View/Index/signin.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <!--<link rel="icon" href="__PBULIC__/img/icon.png">-->
 
-    <title>Signin Template for Bootstrap</title>
+    <title>登陆E-Learning</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../../Public/css/bootstrap.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
 
         <div id="navtabs" class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
-                <li class="active nav-current" role="presentation"><a href="#">Home</a></li>
+                <li class="active nav-current" role="presentation"><a href="{:U('Index/index')}">Home</a></li>
                 <li><a href="#">My Courses</a></li>
                 <li><a href="#">Topics</a></li>
                 <li><a href="#">Files</a></li>
