--- a/Application/Home/Public/css/index.css
+++ b/Application/Home/Public/css/index.css
@@ -2,6 +2,15 @@
  * Created by gaoyang on 15/8/8.
  */
 
+.nav-tabs{
+    background: #ffffff;
+    width: 100%;
+    text-align: right;
+    border-top: 1px solid #d3d3d3;
+    border-left: 1px solid #d3d3d3;
+    border-right: 1px solid #d3d3d3;
+
+}
 
 
 
@@ -13,7 +22,10 @@
     background: #ffffff;
     list-style: none;
     text-align: left;
-    border: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    border-left: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+
     border-radius: 2px;
 }
 
@@ -22,6 +34,7 @@
     border-top: 1px solid lightgray;
     padding-left: 5%;
 }
+
 
 .topic-list .topic-content{
     text-align: left;
