--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -91,233 +91,240 @@
 
             </div>
         </div>
-        <div class="nav-tabs">
+
+        <div class="main-content-navtabs">
 
             <div class="col-lg-6">
+
+                <ul class="nav nav-tabs active">
+                    <li><a href="#" class="active" >最新</a> </li>
+                    <li><a href="#">热门</a> </li>
+                </ul>
+
                 <ul class="topic-list list-unstyled list-group">
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">{$title}</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li class="first-topic">
+                        <div class="topic-head first-topic-head">
+                            <h2 align="left">{$title}</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span class="department">软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span class="grade">大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span class="postdate">2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
 
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li>
+                        <div class="topic-head">
+                            <h2 align="left">这是一个问题</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span>2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
 
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li>
+                        <div class="topic-head">
+                            <h2 align="left">这是一个问题</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span>2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
 
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li>
+                        <div class="topic-head">
+                            <h2 align="left">这是一个问题</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span>2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
 
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li>
+                        <div class="topic-head">
+                            <h2 align="left">这是一个问题</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span>2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
 
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li>
+                        <div class="topic-head">
+                            <h2 align="left">这是一个问题</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span>2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
 
-            <li>
-                <div class="topic-head">
-                    <h2 align="left">这是一个问题</h2>
-                    <div class="topic-meta">
-                        <span class="author"><a href="#">gaoyang</a></span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>软件学院</span>
-                        &nbsp;&nbsp;&nbsp;
-                        <span>大二</span>
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <span>2015年8月15日</span>
-                    </div>
-                </div>
-                <hr>
-                <div class="topic-content">
-                    <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
-                        蠢这么蠢这么蠢这么蠢</p>
-                </div>
+                    <li>
+                        <div class="topic-head">
+                            <h2 align="left">这是一个问题</h2>
+                            <div class="topic-meta">
+                                <span class="author"><a href="#">gaoyang</a></span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>软件学院</span>
+                                &nbsp;&nbsp;&nbsp;
+                                <span>大二</span>
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                <span>2015年8月15日</span>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="topic-content">
+                            <p >为什么曹二这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么蠢这么
+                                蠢这么蠢这么蠢这么蠢</p>
+                        </div>
 
-                <div class="topic-readmore-btn">
-                    <a class="btn btn-default">阅读全文</a>
-                </div>
+                        <div class="topic-readmore-btn">
+                            <a class="btn btn-default">阅读全文</a>
+                        </div>
 
-                <hr>
-                <div class="topic-tips">
-                    <ul class="list-inline">
-                        <li><a href="#">Comment:<small>100</small></a></li>
-                        <li><a href="#">Likes:<small>50</small></a></li>
-                    </ul>
-                </div>
-            </li>
+                        <hr>
+                        <div class="topic-tips">
+                            <ul class="list-inline">
+                                <li><a href="#">Comment:<small>100</small></a></li>
+                                <li><a href="#">Likes:<small>50</small></a></li>
+                            </ul>
+                        </div>
+                    </li>
             </ul>
                 <div class="load-more">
                     <a href="#">查看更多</a>
