--- a/Application/Home/View/Index/article.html
+++ b/Application/Home/View/Index/article.html
@@ -1,35 +1,18 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,Chrome=1">
-    <meta name="renderer" content="webkit">
     <title>###article</title>
-    <link href="http://wenda.ghostchina.com/static/css/default/ico/favicon.ico?v=20140930" rel="shortcut icon"
-          type="image/x-icon">
 
-    <link href="http://wenda.ghostchina.com/static/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="http://wenda.ghostchina.com/static/css/icon.css" rel="stylesheet" type="text/css">
-
-    <link href="http://wenda.ghostchina.com/static/css/default/common.css?v=20140930" rel="stylesheet" type="text/css">
-    <link href="http://wenda.ghostchina.com/static/css/default/link.css?v=20140930" rel="stylesheet" type="text/css">
-    <link href="http://wenda.ghostchina.com/static/js/plug_module/style.css?v=20140930" rel="stylesheet"
-          type="text/css">
-
-    <!--[if lte IE 8]>
-    <script type="text/javascript" src="http://wenda.ghostchina.com/static/js/respond.js"></script>
-    <![endif]-->
+    <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="__PUBLIC__/css/icon.css" rel="stylesheet" type="text/css">
+    <link href="__PUBLIC__/css/common.css?v=20140930" rel="stylesheet" type="text/css">
+    <link href="__PUBLIC__/css/index-nav.css" rel="stylesheet">
+    <link href="__PUBLIC__/css/index.css" rel="stylesheet">
     <style type="text/css">.fancybox-margin {
         margin-right: 0px;
     }</style>
 </head>
 <body>
-<!-- <noscript id="noscript" unselectable="on">
-    &lt;div class="aw-404 aw-404-wrap container"&gt;
-    &lt;img src="http://wenda.ghostchina.com/static/common/no-js.jpg"&gt;
-    &lt;p&gt;你的浏览器禁用了JavaScript, 请开启后刷新浏览器获得更好的体验!&lt;/p&gt;
-    &lt;/div&gt;
-</noscript> -->
 <nav class="nav navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="cotainer">
         <div class="navbar-header">
@@ -43,13 +26,13 @@
         </div>
 
 
-        <div id="navtabs" class="collapse navbar-collapse">
+        <div id="navtabs" class="collapse navbar-collapse" >
             <ul class="nav navbar-nav">
                 <li class="active nav-current" role="presentation"><a href="{:U('Index/index')}">Home</a></li>
                 <li><a href="#">My Courses</a></li>
                 <li><a href="#">Topics</a></li>
                 <li><a href="#">Files</a></li>
-                <li><a href="#">ContactUs</a></li>
+                <li><a href="#">ContactUs</a> </li>
             </ul>
 
             <ul id="settings" class="nav navbar-nav navbar-right">
@@ -495,17 +478,6 @@
         </div>
     </div>
 </div>
-
-<script type="text/javascript">
-    ATTACH_ACCESS_KEY = '7ce10b1c25adea419f88a931c987e5cb';
-    ITEM_IDS = '';
-    COMMENT_UNFOLD = '';
-
-    QUESTION_ID = 205;
-    UNINTERESTED_COUNT = 5;
-</script>
-
-<script src="http://wenda.ghostchina.com/static/js/app/question_detail.js" type="text/javascript"></script>
 
 <div class="aw-footer-wrap">
     <div class="aw-footer">
