--- a/Application/Home/View/Index/article.html
+++ b/Application/Home/View/Index/article.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <title>###article</title>
@@ -8,9 +9,28 @@
     <link href="__PUBLIC__/css/common.css" rel="stylesheet" type="text/css">
     <link href="__PUBLIC__/css/index-nav.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdn.quilljs.com/0.20.0/quill.snow.css" />
+    <link href="//cdn.bootcss.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/summernote/0.6.16/summernote-bs3.min.css" rel="stylesheet">
+    <link href="//cdn.bootcss.com/summernote/0.6.16/summernote.min.css" rel="stylesheet">
     <style type="text/css">.fancybox-margin {
         margin-right: 0px;
     }</style>
+    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="__PUBLIC__/js/article.js"></script>
+    <!-- include summernote css/js-->
+    <link href="__PUBLIC__/css/summernote.css" rel="stylesheet">
+    <script src="__PUBLIC__/js/summernote.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("$summernote").summernote();
+        });
+
+    </script>
 
 </head>
 <body>
@@ -525,7 +545,7 @@
                     </div>
                     <!-- end 问题详细模块 -->
                     <!-- Create the toolbar container -->
-                    <textarea id="summernote">Hello Summernote</textarea>
+                    <div id="summernote">Hello Summernote</div>
 
                     <!-- 回复编辑器 -->
                     <div class="aw-mod aw-replay-box question">
@@ -624,21 +644,6 @@
         Copyright © 2015<span class="hidden-xs"> - E-Learning</span>
     </div>
 </div>
-<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-<script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 
-<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src="__PUBLIC__/js/article.js"></script>
-<!-- include summernote css/js-->
-<link href="__PUBLIC__/css/summernote.css" />
-<script src="__PUBLIC__/js/summernote.min.js"></script>
-<script type="text/javascript">
-    $(document).ready(function(){
-        $("$summernote").summernote();
-    });
-
-</script>
 </body>
 </html>
