--- a/Application/Home/Public/css/index.css
+++ b/Application/Home/Public/css/index.css
@@ -3,7 +3,7 @@
  */
 
 body{
-    background: #ffffff;
+    background: #ebebeb;
 }
 
 
@@ -32,16 +32,17 @@ body{
 
 .topic-readmore-btn{
     text-align: right;
-    padding-right: 5%;
+    padding-right: 10px;
+    padding-bottom: 3px;
 }
 
 
 .sidebar-department-list{
     list-style:none;
-    border: 1px solid lightgray;
+    border-radius: 2px;
+    border: 2px solid lightgray;
     background: #ffffff;
     text-align: center;
-    margin-top: 0px;
 }
 
 .department-list li{
@@ -163,6 +164,10 @@ body{
     border-bottom: 1px solid lightgrey;
     width: 100%;
     left: 0;
+}
+
+.article-more-btn{
+    margin-top: -2.2%;
 }
 
 /*.widght .title:after{*/
