--- a/Application/Home/View/Index/article.html
+++ b/Application/Home/View/Index/article.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-    <title>###article</title>
+    <title>帖子区</title>
 
     <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="__PUBLIC__/css/icon.css" rel="stylesheet" type="text/css">
