--- a/Application/Home/View/Index/homePage.html
+++ b/Application/Home/View/Index/homePage.html
@@ -244,7 +244,7 @@
                                     </div>
                                     <div class="mod-footer">
                                         <!-- 加载更多内容 -->
-                                        <a class="aw-load-more-content" id="bp_user_actions_questions_more" data-page="1">
+                                        <a class="btn btn-default btn-nav" id="bp_user_actions_questions_more" data-page="1" style="width: 100%;">
                                             <span>更多</span>
                                         </a>
                                         <!-- end 加载更多内容 -->
@@ -315,9 +315,9 @@
 
                                         </div>
                                     </div>
-                                    <div class="mod-footer">
+                                    <div class="article-more-btn">
                                         <!-- 加载更多内容 -->
-                                        <a class="aw-load-more-content" id="bp_user_actions_more" data-page="1">
+                                        <a class="btn btn-default btn-nav" id="bp_user_actions_more" data-page="1">
                                             <span>更多</span>
                                         </a>
                                         <!-- end 加载更多内容 -->
