--- a/Application/Home/View/Index/signin.html
+++ b/Application/Home/View/Index/signin.html
@@ -1,97 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="zh">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!--<link rel="icon" href="__PBULIC__/img/icon.png">-->
-
-    <title>登陆E-Learning</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../Public/css/bootstrap.min.css" rel="stylesheet">
-    <link href="__PUBLIC__/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../Public/css/signin.css" rel="stylesheet">
-    <link href="__PUBLIC__/css/signin.css" rel="stylesheet">
-    <link href="__PUBLIC__/css/index-nav.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="../../Public/css/signin.css" rel="stylesheet">
-    <link href="../../Public/css/index-nav.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><!--<script src="../../assets/js/ie8-responsive-file-warning.js"></script>--><![endif]-->
-    <!--<script src="../../assets/js/ie-emulation-modes-warning.js"></script>-->
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>登入E-Learning</title>
+<link rel="stylesheet" type="text/css" href="__PUBLIC__/css/signin.css">
 </head>
 <body>
-
-<nav class="nav navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="cotainer">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navtabs">
-                <span class="sr-only">切换导航</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a href="#" class="navbar-brand">E-Learning</a>
+<div class="htmleaf-container">
+	<div class="wrapper">
+		<div class="container">
+			<h1>欢迎加入E-Learning</h1>
+			
+			<form class="form">
+				<input type="text" placeholder="用户名">
+				<input type="password" placeholder="密码">
+				<button type="submit" id="login-button">登入</button>
+			</form>
         </div>
 
+		<ul class="bg-bubbles">
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
+</div>
 
-        <div id="navtabs" class="collapse navbar-collapse" >
-            <ul class="nav navbar-nav">
-                <li class="active nav-current" role="presentation"><a href="{:U('Index/index')}">Home</a></li>
-                <li><a href="#">My Courses</a></li>
-                <li><a href="#">Topics</a></li>
-                <li><a href="#">Files</a></li>
-                <li><a href="#">ContactUs</a> </li>
-            </ul>
+<script src="__PUBLIC__/js/jquery-1.11.1.min.js" type="text/javascript"></script>
+<script>
+$('#login-button').click(function (event) {
+	event.preventDefault();
+	$('form').fadeOut(500);
+	$('.wrapper').addClass('form-success');
+});
+</script>
 
-            <ul id="settings" class="nav navbar-nav navbar-right">
-                <li class="right">
-                    <form class="navbar-form" role="search">
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Search">
-                        </div>
-                        <button type="submit" class="btn btn-default">搜索</button>
-                    </form>
-                </li>
-                <li><a href="#">设置</a></li>
-                <li><a href="#">登陆</a></li>
-                <li><a href="#">注册</a></li>
-                <li><img class="small" src="__PUBLIC__/img/icon.png" style="width:40px;height:40px"></li>
-
-            </ul>
-        </div>
-    </div>
-
-</nav>
-
-<div class="container">
-
-    <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="btn btn-lg btn-default btn-block" type="submit">Sign in</button>
-    </form>
-
-</div> <!-- /container -->
-
+<div style="text-align:center;margin:50px 0; font:normal 14px/24px 'MicroSoft YaHei';color:#000000">
+<p>Copyright &copy; 2015<a href="{:U('Index/index')}">E-Learning</a></p>
+</div>
 </body>
 </html>
